--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,5 +122,6 @@ stages:
             displayName: 'Azure App Service Deploy: website'
             inputs:
               azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName:  $(WebAppNameDev)
+#              appName:  '$(WebAppNameDev)'
+              appName: 'tailspin-space-game-web-dev-9936'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
